--- a/css/stylelqm.css
+++ b/css/stylelqm.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 .login_box{background: url("../images/bg.png") no-repeat center center;background-size: 100% 100%;height: 100%;padding:2.5rem 1.5rem 1rem 1.5rem;box-sizing:border-box;position: relative}
 .logo{background: url("../images/logo.png") no-repeat center center;width:100%;height:4.1rem;margin: 0 auto 2.15rem auto; background-size: 100% 100%;}
-.login_box input{width:100%;height: 1.75rem;font-size: 0.6rem;text-align: center;border-radius: 0.875rem;margin-bottom:1rem;color:#fff;border:none; }
+.login_box input,.login_box button{width:100%;height: 1.75rem;font-size: 0.6rem;text-align: center;border-radius: 0.875rem;margin-bottom:1rem;color:#fff;border:none; }
 .login_box input[type="text"],.login_box input[type="password"]{background-color: rgba(255,255,255,0.2);}
 .login_box  ::-webkit-input-placeholder {color:#fff;}
 .login_box  :-moz-placeholder { color:#fff;}
 .login_box  ::-moz-placeholder {　color:#fff;}
 .login_box form{margin: 0 auto;width: 13rem}
-.login_box input[type="button"]{background-color:#f60}
+.login_box button{background-color:#f60}
 .login_box p{text-align: center;color: #fff;font-size: 0.6rem;position: absolute;bottom: 1rem;width: 13rem;}
